--- a/public/sass/_footer.scss
+++ b/public/sass/_footer.scss
@@ -33,7 +33,7 @@
   }
 }
 
-.footer__nav {
+.footer_nav {
   text-align: center;
 
   ul {
@@ -58,7 +58,7 @@
   }
 }
 
-.footer__copyright__text {
+.footer_copyright_text {
   color: #b7b7b7;
   margin-bottom: 0;
   text-align: right;
