--- a/public/sass/_login.scss
+++ b/public/sass/_login.scss
@@ -6,7 +6,7 @@
     padding-bottom: 120px;
 }
 
-.login__form {
+.login_form {
     position: relative;
     padding-left: 145px;
     
@@ -29,7 +29,7 @@
 
     form {
         
-        .input__item {
+        .input_item {
             position: relative;
             width: 370px;
             margin-bottom: 20px;
@@ -83,7 +83,7 @@
     }
 }
 
-.login__register {
+.login_register {
     padding-left: 30px;
 
     h3 {
@@ -99,11 +99,11 @@
     }
 }
 
-.login__social {
+.login_social {
     padding-top: 52px;
 }
 
-.login__social__links {
+.login_social_links {
     text-align: center;
     
     span {
