--- a/public/sass/_signup.scss
+++ b/public/sass/_signup.scss
@@ -5,7 +5,7 @@
   padding-top: 130px;
   padding-bottom: 150px;
 
-  .login__form {
+  .login_form {
 
       &:after {
           height: 450px;
@@ -23,7 +23,7 @@
       }
   }
 
-  .login__social__links {
+  .login_social_links {
     text-align: left;
     padding-left: 40px;
 
