--- a/public/css/style.css
+++ b/public/css/style.css
@@ -446,13 +446,16 @@ ol {
 }
 
 .hero_items {
-  padding: 250px 0 42px 50px;
+  padding: 50px 0 42px 50px;
   border-radius: 5px;
+  position: relative;
 }
 
 .hero_text {
-  position: relative;
+  position: absolute;
   z-index: 9;
+  transform: translateY(-300px);
+  margin-left: 90px;
 }
 
 .hero_text .label {
@@ -461,9 +464,9 @@ ol {
   background: #ffffff;
   padding: 5px 14px 3px;
   display: inline-block;
-  position: relative;
-  top: -100px;
-  opacity: 0;
+  /* position: relative; */
+  /* top: -100px; */
+  opacity: 1;
   -webkit-transition: all, 0.2s;
   -o-transition: all, 0.2s;
   transition: all, 0.2s;
@@ -477,9 +480,9 @@ ol {
   line-height: 52px;
   margin-top: 35px;
   margin-bottom: 8px;
-  position: relative;
-  top: -100px;
-  opacity: 0;
+  /* position: relative; */
+  /* top: -100px; */
+  opacity: 1;
   -webkit-transition: all, 0.4s;
   -o-transition: all, 0.4s;
   transition: all, 0.4s;
@@ -489,18 +492,18 @@ ol {
   color: #ffffff;
   font-size: 16px;
   margin-bottom: 40px;
-  position: relative;
-  top: -100px;
-  opacity: 0;
+  /* position: relative; */
+  /* top: -100px; */
+  opacity: 1;
   -webkit-transition: all, 0.6s;
   -o-transition: all, 0.6s;
   transition: all, 0.6s;
 }
 
 .hero_text a {
-  position: relative;
-  top: -100px;
-  opacity: 0;
+  /* position: relative; */
+  /* top: -100px; */
+  opacity: 1;
   -webkit-transition: all, 0.8s;
   -o-transition: all, 0.8s;
   transition: all, 0.8s;
