--- a/public/sass/_anime-details.scss
+++ b/public/sass/_anime-details.scss
@@ -5,11 +5,11 @@
     padding-top: 60px;
 }
 
-.anime__details__content {
+.anime_details_content {
     margin-bottom: 65px;
 }
 
-.anime__details__text {
+.anime_details_text {
     position: relative;
 
     p {
@@ -19,7 +19,7 @@
     }
 }
 
-.anime__details__pic {
+.anime_details_pic {
     height: 440px;
     border-radius: 5px;
     position: relative;
@@ -49,7 +49,7 @@
     }
 }
 
-.anime__details__title {
+.anime_details_title {
     margin-bottom: 20px;
 
     h3 {
@@ -65,7 +65,7 @@
     }
 }
 
-.anime__details__rating {
+.anime_details_rating {
     text-align: center;
     position: absolute;
     right: 0;
@@ -87,7 +87,7 @@
     }
 }
 
-.anime__details__widget {
+.anime_details_widget {
     margin-bottom: 15px;
 
     ul {
@@ -120,7 +120,7 @@
     }
 }
 
-.anime__details__btn {
+.anime_details_btn {
 
     .follow-btn {
         font-size: 13px;
@@ -161,16 +161,16 @@
     }
 }
 
-.anime__details__review {
+.anime_details_review {
     margin-bottom: 55px;
 }
 
-.anime__review__item {
+.anime_review_item {
     overflow: hidden;
     margin-bottom: 15px;
 }
 
-.anime__review__item__pic {
+.anime_review_item_pic {
     float: left;
     margin-right: 20px;
     position: relative;
@@ -192,7 +192,7 @@
     }
 }
 
-.anime__review__item__text{
+.anime_review_item_text{
    overflow: hidden;
     background: #1d1e39;
     padding: 18px 30px 16px 20px;
@@ -216,7 +216,7 @@
     }
 }
 
-.anime__details__form {
+.anime_details_form {
 
     form {
 
