--- a/public/sass/_breadcrumb.scss
+++ b/public/sass/_breadcrumb.scss
@@ -5,7 +5,7 @@
     padding-top: 35px;
 }
 
-.breadcrumb__links {
+.breadcrumb_links {
 
     a {
         font-size: 15px;
@@ -45,7 +45,7 @@
     justify-content: center;
 }
 
-.normal__breadcrumb__text {
+.normal_breadcrumb_text {
 
     h2 {
         color: $white-color;
