--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -5,7 +5,7 @@
     background: #070720;
 }
 
-.header__logo {
+.header_logo {
     padding: 20px 0 17px;
 
     a {
@@ -13,7 +13,7 @@
     }
 }
 
-.header__menu {
+.header_menu {
     text-align: center;
 
     ul {
@@ -101,7 +101,7 @@
     }
 }
 
-.header__right {
+.header_right {
     text-align: right;
     padding: 20px 0 15px;
 
