--- a/public/sass/_product.scss
+++ b/public/sass/_product.scss
@@ -11,28 +11,28 @@
   padding-top: 60px;
 }
 
-.btn__all {
+.btn_all {
   text-align: right;
   margin-bottom: 30px;
 }
 
-.trending__product {
+.trending_product {
   margin-bottom: 50px;
 }
 
-.popular__product {
+.popular_product {
   margin-bottom: 50px;
 }
 
-.recent__product {
+.recent_product {
   margin-bottom: 50px;
 }
 
-.product__item {
+.product_item {
   margin-bottom: 30px;
 }
 
-.product__item__pic {
+.product_item_pic {
   height: 325px;
   position: relative;
   border-radius: 5px;
@@ -74,7 +74,7 @@
   }
 }
 
-.product__item__text {
+.product_item_text {
   padding-top: 20px;
 
   ul {
@@ -102,7 +102,7 @@
   }
 }
 
-.product__sidebar {
+.product_sidebar {
 
   .section-title {
 
@@ -128,11 +128,11 @@
   }
 }
 
-.product__sidebar__view {
+.product_sidebar_view {
   position: relative;
   margin-bottom: 80px;
 
-  .filter__controls {
+  .filter_controls {
     position: absolute;
     right: 0;
     top: -5px;
@@ -156,7 +156,7 @@
   }
 }
 
-.product__sidebar__view__item {
+.product_sidebar_view_item {
   height: 190px;
   position: relative;
   border-radius: 5px;
@@ -201,21 +201,21 @@
   }
 }
 
-.product__sidebar__comment {
+.product_sidebar_comment {
   margin-bottom: 35px;
 }
 
-.product__sidebar__comment__item {
+.product_sidebar_comment_item {
   margin-bottom: 20px;
   overflow: hidden;
 }
 
-.product__sidebar__comment__item__pic {
+.product_sidebar_comment_item_pic {
   float: left;
   margin-right: 15px;
 }
 
-.product__sidebar__comment__item__text {
+.product_sidebar_comment_item_text {
   overflow: hidden;
 
   ul {
@@ -250,7 +250,7 @@
   }
 }
 
-.product__page__title {
+.product_page_title {
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
   padding-bottom: 10px;
   margin-bottom: 30px;
@@ -259,7 +259,7 @@
     margin-bottom: 0;
   }
 
-  .product__page__filter {
+  .product_page_filter {
     text-align: right;
 
     p {
@@ -298,7 +298,7 @@
   }
 }
 
-.product__pagination {
+.product_pagination {
   padding-top: 15px;
 
   a {
