--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2346,3 +2346,28 @@ ol {
     padding: 18px 20px 20px;
   }
 }
+.container-contact {
+  background-color:white;
+}
+.h1-contact {
+  font-weight:bold;
+  margin-left:650px;
+}
+.message {
+  height:200px;
+  
+}
+.mail-icon {
+  width:300px;
+  height:300px;
+}
+.submit-btn {
+  margin-left:200px;
+  width:200px;
+}
+.mail-img {
+  width:400px;
+  height:400px;
+  margin-top:-30px;
+  margin-left:200px;
+}
